decaf_PA1/out/production/decaf_PA1/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SealDef CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  SealDef : SEALED
  14          |

  15  ExtendsClause : EXTENDS IDENTIFIER
  16                |

  17  FieldList : FieldList VariableDef
  18            | FieldList FunctionDef
  19            |

  20  Formals : VariableList
  21          |

  22  VariableList : VariableList ',' Variable
  23               | Variable

  24  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  25              | Type IDENTIFIER '(' Formals ')' StmtBlock

  26  StmtBlock : '{' StmtList '}'

  27  StmtList : StmtList Stmt
  28           |

  29  Stmt : VariableDef
  30       | SimpleStmt ';'
  31       | IfStmt
  32       | GuardedStmt
  33       | WhileStmt
  34       | ForStmt
  35       | ForeachStmt
  36       | ReturnStmt ';'
  37       | PrintStmt ';'
  38       | BreakStmt ';'
  39       | OCStmt ';'
  40       | StmtBlock

  41  SimpleStmt : LValue '=' Expr
  42             | Call
  43             |

  44  Receiver : Expr '.'
  45           |

  46  LValue : Receiver IDENTIFIER
  47         | Expr '[' Expr ']'
  48         | VarDef

  49  VarDef : VAR IDENTIFIER

  50  Call : Receiver IDENTIFIER '(' Actuals ')'

  51  Expr : LValue
  52       | Call
  53       | Constant
  54       | Expr DOUBLEMOD Expr
  55       | Expr DOUBLEPLUS Expr
  56       | Expr '[' Expr ':' Expr ']'
  57       | Expr '[' Expr ']' DEFAULT Expr
  58       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'
  59       | '[' Expr FOR IDENTIFIER IN Expr ']'
  60       | Expr '+' Expr
  61       | Expr '-' Expr
  62       | Expr '*' Expr
  63       | Expr '/' Expr
  64       | Expr '%' Expr
  65       | Expr EQUAL Expr
  66       | Expr NOT_EQUAL Expr
  67       | Expr '<' Expr
  68       | Expr '>' Expr
  69       | Expr LESS_EQUAL Expr
  70       | Expr GREATER_EQUAL Expr
  71       | Expr AND Expr
  72       | Expr OR Expr
  73       | '(' Expr ')'
  74       | '-' Expr
  75       | '!' Expr
  76       | READ_INTEGER '(' ')'
  77       | READ_LINE '(' ')'
  78       | THIS
  79       | NEW IDENTIFIER '(' ')'
  80       | NEW Type '[' Expr ']'
  81       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  82       | '(' CLASS IDENTIFIER ')' Expr

  83  Constant : LITERAL
  84           | '[' ConstantList ']'
  85           | '[' ']'
  86           | NULL

  87  ConstantList : ConstantList ',' Constant
  88               | Constant

  89  Actuals : ExprList
  90          |

  91  ExprList : ExprList ',' Expr
  92           | Expr

  93  WhileStmt : WHILE '(' Expr ')' Stmt

  94  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  95  ForeachStmt : FOREACH '(' BoundVar IN Expr WHILE Expr ')' Stmt
  96              | FOREACH '(' BoundVar IN Expr ')' Stmt

  97  BoundVar : Variable
  98           | VarDef

  99  BreakStmt : BREAK

 100  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

 101  IfStmt : IF '(' Expr ')' Stmt ElseClause

 102  GuardedStmt : IF '{' IfSubStmtList '}'

 103  IfSubStmtList : IfSubStmtList IFOR IfSubStmt
 104                | IfSubStmt
 105                |

 106  IfSubStmt : Expr ':' Stmt

 107  ElseClause : ELSE Stmt
 108             |

 109  ReturnStmt : RETURN Expr
 110             | RETURN

 111  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)
	SealDef : .  (14)

	SEALED  shift 1
	CLASS  reduce 14

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4
	SealDef  goto 5


state 1
	SealDef : SEALED .  (13)

	.  reduce 13


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)
	SealDef : .  (14)

	SEALED  shift 1
	$end  reduce 1
	CLASS  reduce 14

	ClassDef  goto 6
	SealDef  goto 5


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : SealDef . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ClassDef : SealDef CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 8
	.  error


state 8
	ClassDef : SealDef CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (16)

	EXTENDS  shift 9
	'{'  reduce 16

	ExtendsClause  goto 10


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (15)

	IDENTIFIER  shift 11
	.  error


state 10
	ClassDef : SealDef CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 12
	.  error


state 11
	ExtendsClause : EXTENDS IDENTIFIER .  (15)

	.  reduce 15


state 12
	ClassDef : SealDef CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 13


state 13
	ClassDef : SealDef CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	STATIC  shift 19
	'}'  shift 20
	.  error

	VariableDef  goto 21
	Variable  goto 22
	Type  goto 23
	FunctionDef  goto 24


state 14
	Type : VOID .  (7)

	.  reduce 7


state 15
	Type : BOOL .  (8)

	.  reduce 8


state 16
	Type : INT .  (6)

	.  reduce 6


state 17
	Type : STRING .  (9)

	.  reduce 9


state 18
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 25
	.  error


state 19
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (24)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Type  goto 26


state 20
	ClassDef : SealDef CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 21
	FieldList : FieldList VariableDef .  (17)

	.  reduce 17


state 22
	VariableDef : Variable . ';'  (4)

	';'  shift 27
	.  error


state 23
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (25)

	IDENTIFIER  shift 28
	'['  shift 29
	.  error


state 24
	FieldList : FieldList FunctionDef .  (18)

	.  reduce 18


state 25
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 26
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 30
	'['  shift 29
	.  error


state 27
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 28
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (25)

	'('  shift 31
	';'  reduce 5


state 29
	Type : Type '[' . ']'  (11)

	']'  shift 32
	.  error


state 30
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 33
	.  error


state 31
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (25)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 36
	VariableList  goto 37


state 32
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 33
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 38
	VariableList  goto 37


state 34
	VariableList : Variable .  (23)

	.  reduce 23


state 35
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 39
	'['  shift 29
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (25)

	')'  shift 40
	.  error


state 37
	Formals : VariableList .  (20)
	VariableList : VariableList . ',' Variable  (22)

	','  shift 41
	')'  reduce 20


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 42
	.  error


state 39
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 40
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (25)

	'{'  shift 43
	.  error

	StmtBlock  goto 44


state 41
	VariableList : VariableList ',' . Variable  (22)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Variable  goto 45
	Type  goto 35


state 42
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 43
	.  error

	StmtBlock  goto 46


state 43
	StmtBlock : '{' . StmtList '}'  (26)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 47


state 44
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (25)

	.  reduce 25


state 45
	VariableList : VariableList ',' Variable .  (22)

	.  reduce 22


state 46
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 47
	StmtBlock : '{' StmtList . '}'  (26)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (43)
	Receiver : .  (45)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	NULL  shift 48
	THIS  shift 49
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	'{'  shift 43
	'}'  shift 65
	SCOPY  shift 66
	VAR  shift 67
	FOREACH  shift 68
	IDENTIFIER  reduce 45
	';'  reduce 43

	VariableDef  goto 69
	Variable  goto 22
	Type  goto 35
	StmtBlock  goto 70
	Stmt  goto 71
	SimpleStmt  goto 72
	IfStmt  goto 73
	GuardedStmt  goto 74
	WhileStmt  goto 75
	ForStmt  goto 76
	ForeachStmt  goto 77
	ReturnStmt  goto 78
	PrintStmt  goto 79
	BreakStmt  goto 80
	OCStmt  goto 81
	LValue  goto 82
	Expr  goto 83
	Call  goto 84
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 87


state 48
	Constant : NULL .  (86)

	.  reduce 86


state 49
	Expr : THIS .  (78)

	.  reduce 78


state 50
	WhileStmt : WHILE . '(' Expr ')' Stmt  (93)

	'('  shift 88
	.  error


state 51
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (94)

	'('  shift 89
	.  error


state 52
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (101)
	GuardedStmt : IF . '{' IfSubStmtList '}'  (102)

	'('  shift 90
	'{'  shift 91
	.  error


state 53
	ReturnStmt : RETURN . Expr  (109)
	ReturnStmt : RETURN .  (110)
	Receiver : .  (45)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 45
	';'  reduce 110

	LValue  goto 92
	Expr  goto 93
	Call  goto 94
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 87


state 54
	BreakStmt : BREAK .  (99)

	.  reduce 99


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (79)
	Expr : NEW . Type '[' Expr ']'  (80)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	IDENTIFIER  shift 95
	.  error

	Type  goto 96


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (111)

	'('  shift 97
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (76)

	'('  shift 98
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (77)

	'('  shift 99
	.  error


state 59
	Constant : LITERAL .  (83)

	.  reduce 83


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (81)

	'('  shift 100
	.  error


state 61
	Expr : '-' . Expr  (74)
	Receiver : .  (45)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 45

	LValue  goto 92
	Expr  goto 101
	Call  goto 94
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 87


state 62
	Expr : '!' . Expr  (75)
	Receiver : .  (45)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 45

	LValue  goto 92
	Expr  goto 102
	Call  goto 94
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 87


state 63
	Expr : '(' . Expr ')'  (73)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (82)
	Receiver : .  (45)

	CLASS  shift 103
	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 45

	LValue  goto 92
	Expr  goto 104
	Call  goto 94
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 87


state 64
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF Expr ']'  (58)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (59)
	Constant : '[' . ConstantList ']'  (84)
	Constant : '[' . ']'  (85)
	Receiver : .  (45)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	']'  shift 105
	VAR  shift 67
	IDENTIFIER  reduce 45

	LValue  goto 92
	Expr  goto 106
	Call  goto 94
	Receiver  goto 85
	VarDef  goto 86
	Constant  goto 107
	ConstantList  goto 108


state 65
